# django-anvil-consortium-manager

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  add_test_data.py  manage.py  pyproject.toml  pytest.ini  runtests.py  setup.cfg  tox.ini
.github/: release-drafter.yml
.github/workflows/: check-version.yml  ci-mariadb.yml  ci-tests.yml  ci-tox.yml  ci.yml  ci_hatch.yml  coverage.yml  release-drafter.yml  tests.yml
anvil_consortium_manager/: __init__.py  adapter.py  admin.py  anvil_api.py  anvil_audit.py  app_settings.py  apps.py  auth.py  context_processors.py  exceptions.py  filters.py  forms.py  models.py  tables.py  tokens.py  urls.py  viewmixins.py  views.py
anvil_consortium_manager/adapters/: account.py  default.py  managed_group.py  mixins.py  workspace.py
anvil_consortium_manager/audit/: accounts.py  audit.py  base.py  billing_projects.py  managed_groups.py  workspaces.py
anvil_consortium_manager/auditor/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  viewmixins.py  views.py
anvil_consortium_manager/migrations/: 0001_initial.py  0002_account_activatormodel.py  0002_account_verification.py  0002_anvilprojectmanageraccess.py  0002_historicalbillingproject.py  0003_anvilprojectmanageraccess.py  0003_historicalaccount_historicalgroupaccountmembership_historicalgroupgroupmembership_historicalmanagedg.py  0003_rename_workspacegroupaccess.py  0003_timestampedmodel.py  0004_add_note_field.py  0004_auto_20221121_1603.py  0004_merge_20220502_1513.py  0005_alter_anvilprojectmanageraccess_options.py  0005_auto_20221121_1620.py  0005_help_text.py  0006_auto_20221121_1623.py  0006_historicalaccount_historicalbillingproject_historicalgroupaccountmembership_historicalgroupgroupmemb.py  0006_historicaldefaultworkspacedata.py  0007_auto_20221121_1640.py  0007_groupaccountmembership_account_historicforeignkey.py  0007_workspacegroupsharing_access_fix_typo.py  0008_account_historicalaccount.py  0008_auto_20221121_1647.py  0008_workspace_is_locked.py  0008_workspacegroupaccess_cancompute.py  0009_alter_anvilprojectmanageraccess_options.py  0009_auto_20221121_1651.py  0009_defaultworkspacedata.py  0009_useremailentry.py  0010_account_uuid.py  0010_alter_account_user.py  0010_managedgroup_add_email.py  0011_populate_managed_group_email.py  0011_useremailentry_remove_canbeverified.py  0011_workspace_workspacedatatype.py  0012_managedgroup_email_unique.py  0012_move_date_verified.py  0013_alter_anvilprojectmanageraccess_options.py  0013_move_verified_account_to_account_verified_email_entry.py  0014_add_new_permissions.py  (+16 more)
anvil_consortium_manager/tests/: api_factories.py  factories.py  test_adapter.py  test_adapter_mixins.py  test_adapters.py  test_anvil_audit.py  test_app_settings.py  test_audit.py  test_auth.py  test_commands.py  test_context_processors.py  test_forms.py  test_migrations.py  test_mixins.py  test_models.py  test_models_anvil_api_unit.py  test_tables.py  test_viewmixins.py  test_views.py  urls.py  utils.py
anvil_project_manager/: admin.py  anvil_api.py  apps.py  exceptions.py  forms.py  models.py  tables.py  urls.py  views.py
anvil_project_manager/migrations/: 0001_initial.py  0002_alter_groupgroupmembership_child_group.py  0002_auto_20220216_1400.py  0002_auto_20220404_1442.py  0002_billingproject.py  0003_alter_workspace_namespace.py  0003_alter_workspacegroupaccess_group.py  0003_rename_access_level_workspacegroupaccess_access.py  0004_auto_20220218_1655.py  0005_auto_20220223_1501.py  0006_account_is_service_account.py  0007_rename_group_membership_group_account_membership.py  0008_groupgroupmembership.py  0009_auto_20220301_1433.py  0010_workspace_authorization_domains.py  0010_workspaceauthorizationdomain.py  0011_alter_workspaceauthorizationdomain_workspace.py  0011_group_is_managed_by_app.py  0012_case_insensitive_validators.py  0013_billingproject_has_app_as_user.py
anvil_project_manager/tests/: factories.py  test_forms.py  test_models.py  test_models_anvil_api.py  test_models_anvil_api_unit.py  test_tables.py  test_views.py  utils.py
anvil_tracker/: apps.py  models.py  urls.py  views.py
anvil_tracker/migrations/: 0001_initial.py  0002_alter_investigator_email.py
anvil_tracker/tests/: factories.py  test_models.py  test_views.py
config/: apps_pilot_wsgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  local_mariadb.py  production.py  test.py
docs/: Makefile  account_adapter.rst  adapter_mixins.rst  adapter_overview.rst  advanced.rst  anvil_api.rst  auditing.rst  conf.py  howto.rst  index.rst  make.bat  managed_group_adapter.rst  management_commands.rst  models.rst  quickstart.rst  requirements.txt  user_guide.rst  users.rst  views.rst  workspace_adapter.rst
docs/api/: anvil_consortium_manager.adapter.rst  anvil_consortium_manager.adapters.account.rst  anvil_consortium_manager.adapters.default.rst  anvil_consortium_manager.adapters.managed_group.rst  anvil_consortium_manager.adapters.mixins.rst  anvil_consortium_manager.adapters.rst  anvil_consortium_manager.adapters.workspace.rst  anvil_consortium_manager.admin.rst  anvil_consortium_manager.anvil_api.rst  anvil_consortium_manager.anvil_audit.rst  anvil_consortium_manager.app_settings.rst  anvil_consortium_manager.apps.rst  anvil_consortium_manager.audit.audit.rst  anvil_consortium_manager.audit.rst  anvil_consortium_manager.auditor.admin.rst  anvil_consortium_manager.auditor.apps.rst  anvil_consortium_manager.auditor.audit.accounts.rst  anvil_consortium_manager.auditor.audit.base.rst  anvil_consortium_manager.auditor.audit.billing_projects.rst  anvil_consortium_manager.auditor.audit.managed_groups.rst  anvil_consortium_manager.auditor.audit.rst  anvil_consortium_manager.auditor.audit.workspaces.rst  anvil_consortium_manager.auditor.filters.rst  anvil_consortium_manager.auditor.forms.rst  (+25 more)
example_site/: conftest.py  settings.py  urls.py
requirements/: base.txt  dev.txt  local.txt  production.txt  test.txt
(+260 files in other folders)
