[metadata]
name = django-anvil-consortium-manager
version = 0.1.dev1
description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
long_description = file: README.md
url = https://github.com/UW-GAC/django-anvil-consortium-manager
author = Adrienne Stilp
author_email = amstilp@uw.edu
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    pytz >= 0
    crispy-bootstrap5 >= 0.6
    django-crispy-forms >= 1.14
    google-auth >= 2.6
    fontawesomefree >= 6.1
    django-tables2 >= 2.4


[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 88
known_first_party = anvil_consortium_manager,example_site
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = anvil_consortium_manager.tests.settings.test

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[coverage:run]
include = example_site/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin
