# [metadata]
# name = django-anvil-consortium-manager
# version = attr: anvil_consortium_manager.__version__
# description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
# long_description = file: README.md
# url = https://github.com/UW-GAC/django-anvil-consortium-manager
# author = Adrienne Stilp
# author_email = amstilp@uw.edu
# license = MIT
# classifiers =
#     Environment :: Web Environment
#     Framework :: Django
#     Framework :: Django :: 3.2
#     Intended Audience :: Developers
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent
#     Programming Language :: Python
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3 :: Only
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
#     Topic :: Internet :: WWW/HTTP
#     Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
# include_package_data = true
# packages = find:
# python_requires = >=3.8
# install_requires =
#     Django >= 3.2
#     pytz >= 0
#     crispy-bootstrap5 >= 0.6
#     django-crispy-forms >= 1.12
#     google-auth >= 2.6
#     fontawesomefree >= 6.1
#     django-autocomplete-light >= 3.9
#     django-filter >= 23.0
#     django-tables2 >= 2.4
#     django-simple-history >= 3.1.1
#     django-extensions >= 3.1.5
#     plotly >= 5.11.0
#     networkx >= 2.8.2
#     numpy >= 1.24


[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

# [isort]
# line_length = 88
# known_first_party = anvil_consortium_manager,example_site
# multi_line_output = 3
# default_section = THIRDPARTY
# skip = venv/
# skip_glob = **/migrations/*.py
# include_trailing_comma = true
# force_grid_wrap = 0
# use_parentheses = true

# [coverage:run]
# include = anvil_consortium_manager/*
# omit = *migrations*, *tests*
# plugins =
#     django_coverage_plugin
